--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   rxdart: ^0.27.3
   google_sign_in: ^5.2.1
+  responsive_builder: ^0.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
