--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   cloud_firestore: ^3.1.5
   google_sign_in: ^5.2.1
   responsive_builder: ^0.4.1
+  url_launcher: ^6.0.17
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.6
+  devtools: ^2.8.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/google.png
+    - assets/github.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
