--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_sign_in: ^5.2.1
   responsive_builder: ^0.4.1
   url_launcher: ^6.0.17
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
