--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
+    "@types/bad-words": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
